# bf-interpreter

./: .gitlab-ci.yml  BrainfuckInterpreter.cpp  BrainfuckInterpreter.hpp  CMakeLists.txt  Interpreter.cpp  Interpreter.hpp  README.md  Tape.cpp  Tape.hpp  Tester.cpp  Tester.hpp  main.cpp
test/: CMakeLists.txt  Kiloseconds.out  main.cpp
test/data/: Endtest.out  PIdigits.out  Precalc.out  Prime-doubled.out  Prime8.out
